tests/react_runtime_automatic/react_runtime_automatic.exp
Error ----------------------------------------------------------------------------------------------------- test.js:8:12

Cannot create `Component` element because property `bar` is missing in `Props` [1] but exists in props [2].
[prop-missing]

   test.js:8:12
   8| const y = <Component bar={3} />; // Error missing foo, got bar
                 ^^^^^^^^^

References:
   test.js:4:27
   4| function Component(props: Props): React$Node { return null }
                                ^^^^^ [1]
   test.js:8:11
   8| const y = <Component bar={3} />; // Error missing foo, got bar
                ^^^^^^^^^^^^^^^^^^^^^ [2]


Error ----------------------------------------------------------------------------------------------------- test.js:8:12

Cannot create `Component` element because property `foo` is missing in props [1] but exists in `Props` [2].
[prop-missing]

   test.js:8:12
   8| const y = <Component bar={3} />; // Error missing foo, got bar
                 ^^^^^^^^^

References:
   test.js:8:11
   8| const y = <Component bar={3} />; // Error missing foo, got bar
                ^^^^^^^^^^^^^^^^^^^^^ [1]
   test.js:4:27
   4| function Component(props: Props): React$Node { return null }
                                ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------------- test.js:9:46

Cannot assign `<Component />` to `z` because property `bar` is missing in `Props` [1] but exists in object type [2] in
the first argument of type argument `ElementType` [3]. [prop-missing]

   test.js:9:46
     9| const z: React$Element<typeof Component2> = <Component bar={3} />; // Error, missing foo got bar
                                                     ^^^^^^^^^

References:
   test.js:4:27
     4| function Component(props: Props): React$Node { return null }
                                  ^^^^^ [1]
   test.js:5:28
     5| function Component2(props: {| bar: number |}): React$Node { return null }
                                   ^^^^^^^^^^^^^^^^^ [2]
   <BUILTINS>/react.js:177:29
   177| declare type React$Element<+ElementType: React$ElementType> = {|
                                    ^^^^^^^^^^^ [3]


Error ----------------------------------------------------------------------------------------------------- test.js:9:46

Cannot assign `<Component />` to `z` because property `foo` is missing in object type [1] but exists in `Props` [2] in
the first argument of type argument `ElementType` [3]. [prop-missing]

   test.js:9:46
     9| const z: React$Element<typeof Component2> = <Component bar={3} />; // Error, missing foo got bar
                                                     ^^^^^^^^^

References:
   test.js:5:28
     5| function Component2(props: {| bar: number |}): React$Node { return null }
                                   ^^^^^^^^^^^^^^^^^ [1]
   test.js:4:27
     4| function Component(props: Props): React$Node { return null }
                                  ^^^^^ [2]
   <BUILTINS>/react.js:177:29
   177| declare type React$Element<+ElementType: React$ElementType> = {|
                                    ^^^^^^^^^^^ [3]


Error ----------------------------------------------------------------------------------------------------- test.js:9:46

Cannot create `Component` element because property `bar` is missing in `Props` [1] but exists in props [2].
[prop-missing]

   test.js:9:46
   9| const z: React$Element<typeof Component2> = <Component bar={3} />; // Error, missing foo got bar
                                                   ^^^^^^^^^

References:
   test.js:4:27
   4| function Component(props: Props): React$Node { return null }
                                ^^^^^ [1]
   test.js:9:45
   9| const z: React$Element<typeof Component2> = <Component bar={3} />; // Error, missing foo got bar
                                                  ^^^^^^^^^^^^^^^^^^^^^ [2]


Error ----------------------------------------------------------------------------------------------------- test.js:9:46

Cannot create `Component` element because property `foo` is missing in props [1] but exists in `Props` [2].
[prop-missing]

   test.js:9:46
   9| const z: React$Element<typeof Component2> = <Component bar={3} />; // Error, missing foo got bar
                                                   ^^^^^^^^^

References:
   test.js:9:45
   9| const z: React$Element<typeof Component2> = <Component bar={3} />; // Error, missing foo got bar
                                                  ^^^^^^^^^^^^^^^^^^^^^ [1]
   test.js:4:27
   4| function Component(props: Props): React$Node { return null }
                                ^^^^^ [2]



Found 6 errors
